tests/parser/snapshots/tests__parser__parser_snapshots__identifier.snap
---
source: tests/parser/parser_snapshots.rs
expression: ast
---
Identifier(
    "variable_name",
)
