tests/parser/snapshots/tests__parser__parser_snapshots__nested_calls.snap
---
source: tests/parser/parser_snapshots.rs
expression: ast
---
Call {
    callee: Identifier(
        "nested",
    ),
    arguments: [
        Call {
            callee: Identifier(
                "foo",
            ),
            arguments: [],
        },
        Call {
            callee: Identifier(
                "bar",
            ),
            arguments: [
                IntLiteral(
                    1,
                ),
                IntLiteral(
                    2,
                ),
            ],
        },
    ],
}
