tests/parser/snapshots/tests__parser__parser_snapshots__precedence_math.snap
---
source: tests/parser/parser_snapshots.rs
expression: ast
---
Binary {
    left: Identifier(
        "a",
    ),
    op: Plus,
    right: Binary {
        left: Identifier(
            "b",
        ),
        op: Multiply,
        right: Identifier(
            "c",
        ),
    },
}
