tests/parser/snapshots/tests__parser__parser_snapshots__simple_call.snap
---
source: tests/parser/parser_snapshots.rs
expression: ast
---
Call {
    callee: Identifier(
        "foo",
    ),
    arguments: [],
}
